; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pccbb/extr_pccbb_pci.c_cbb_pci_resume.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pccbb/extr_pccbb_pci.c_cbb_pci_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cbb_softc = type { i32, i32 (%struct.cbb_softc*)* }

@CBB_SOCKET_EVENT = common dso_local global i32 0, align 4
@CBB_SOCKET_MASK = common dso_local global i32 0, align 4
@CBB_SOCKET_MASK_CD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @cbb_pci_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cbb_pci_resume(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.cbb_softc*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i64 @device_get_softc(i32 %6)
  %8 = inttoptr i64 %7 to %struct.cbb_softc*
  store %struct.cbb_softc* %8, %struct.cbb_softc** %4, align 8
  %9 = load %struct.cbb_softc*, %struct.cbb_softc** %4, align 8
  %10 = getelementptr inbounds %struct.cbb_softc, %struct.cbb_softc* %9, i32 0, i32 1
  %11 = load i32 (%struct.cbb_softc*)*, i32 (%struct.cbb_softc*)** %10, align 8
  %12 = load %struct.cbb_softc*, %struct.cbb_softc** %4, align 8
  %13 = call i32 %11(%struct.cbb_softc* %12)
  %14 = load %struct.cbb_softc*, %struct.cbb_softc** %4, align 8
  %15 = load i32, i32* @CBB_SOCKET_EVENT, align 4
  %16 = call i32 @cbb_get(%struct.cbb_softc* %14, i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load %struct.cbb_softc*, %struct.cbb_softc** %4, align 8
  %18 = load i32, i32* @CBB_SOCKET_EVENT, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @cbb_set(%struct.cbb_softc* %17, i32 %18, i32 %19)
  %21 = load %struct.cbb_softc*, %struct.cbb_softc** %4, align 8
  %22 = load i32, i32* @CBB_SOCKET_MASK, align 4
  %23 = load i32, i32* @CBB_SOCKET_MASK_CD, align 4
  %24 = call i32 @cbb_setb(%struct.cbb_softc* %21, i32 %22, i32 %23)
  %25 = load %struct.cbb_softc*, %struct.cbb_softc** %4, align 8
  %26 = getelementptr inbounds %struct.cbb_softc, %struct.cbb_softc* %25, i32 0, i32 0
  %27 = call i32 @wakeup(i32* %26)
  %28 = load i32, i32* %2, align 4
  %29 = call i32 @bus_generic_resume(i32 %28)
  store i32 %29, i32* %3, align 4
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @device_get_softc(i32) #1

declare dso_local i32 @cbb_get(%struct.cbb_softc*, i32) #1

declare dso_local i32 @cbb_set(%struct.cbb_softc*, i32, i32) #1

declare dso_local i32 @cbb_setb(%struct.cbb_softc*, i32, i32) #1

declare dso_local i32 @wakeup(i32*) #1

declare dso_local i32 @bus_generic_resume(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
